--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+@@include('html/head.html',{
+    'title': 'Main'
+})
 <body>
     @@include('html/header.html',{})
-    <main></main>
+    <main>
+        <img src="img/cover.jpg" alt="">
+    </main>
+    <script src="js/app.min.js"></script>
 </body>
 </html>
