Added SCSS processing
Used gulp-clean-css, browser-sync, gulp-notify, gulp-sass

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     @@include('html/header.html',{})
     <main>
         <img src="img/cover.jpg" alt="">
+        <p>Привіт!</p>
     </main>
     <script src="js/app.min.js"></script>
 </body>
